[gd_scene load_steps=6 format=3 uid="uid://dp4im3iwbykd1"]

[ext_resource type="Texture2D" uid="uid://cimfcakt4fd57" path="res://Core/icon.png" id="1_1g5l3"]
[ext_resource type="Script" path="res://Entity/Context/Voxeling/tool_button.gd" id="2_hcqkd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_afnq4"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 8.0
content_margin_bottom = 6.0
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
corner_radius_top_right = 128
corner_radius_bottom_right = 128

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kfcta"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.32549, 0.32549, 0.32549, 1)
corner_radius_top_left = 14
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8bf74"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.32549, 0.32549, 0.32549, 1)
corner_radius_top_left = 5
corner_radius_top_right = 14
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2
shadow_offset = Vector2(1, 1)

[node name="ToolButton" type="Button"]
offset_right = 107.0
offset_bottom = 74.0
theme_override_styles/normal = SubResource("StyleBoxFlat_afnq4")
text = "tool"
icon = ExtResource("1_1g5l3")
script = ExtResource("2_hcqkd")
lmb_tip = "lmb tip"
rmb_tip = "rmb tip"

[node name="HotkeyButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 10
text = "x"

[node name="Tooltips" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -12.0
offset_right = 178.0
offset_bottom = 26.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 21

[node name="PanelLMB" type="PanelContainer" parent="Tooltips"]
show_behind_parent = true
layout_mode = 2
offset_right = 67.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kfcta")

[node name="LabelLMB" type="Label" parent="Tooltips/PanelLMB"]
layout_mode = 2
offset_left = 6.0
offset_top = 6.0
offset_right = 61.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.709804, 0.709804, 0.709804, 1)
text = "lmb tip"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PanelRMB" type="PanelContainer" parent="Tooltips"]
show_behind_parent = true
layout_mode = 2
offset_left = 88.0
offset_right = 156.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8bf74")

[node name="LabelRMB" type="Label" parent="Tooltips/PanelRMB"]
layout_mode = 2
offset_left = 5.0
offset_top = 5.0
offset_right = 63.0
offset_bottom = 33.0
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.709804, 0.709804, 0.709804, 1)
theme_override_constants/shadow_offset_y = -1
text = "rmb tip"
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_tool_button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_tool_button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_tool_button_pressed"]
[connection signal="pressed" from="HotkeyButton" to="." method="_on_hotkey_pressed"]
